--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -36,7 +36,11 @@
       </HBox>
             <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
             <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-            <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+            <HBox spacing="1">
+                <Label fx:id="emailLabel" styleClass="cell_small_label" text="\$email_label" />
+                <Label fx:id="email" text="\$email" />
+            </HBox>
+
     </VBox>
   </GridPane>
 </HBox>
