--- a/src/main/resources/view/PatientListCard.fxml
+++ b/src/main/resources/view/PatientListCard.fxml
@@ -34,6 +34,6 @@
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
     </VBox>
 
-    <VBox fx:id="importantDates" GridPane.columnIndex="1" alignment="CENTER" />
+    <VBox fx:id="events" GridPane.columnIndex="1" alignment="CENTER" />
   </GridPane>
 </HBox>
