--- a/src/main/resources/view/SummaryStatsWindow.css
+++ b/src/main/resources/view/SummaryStatsWindow.css
@@ -1,19 +1,7 @@
-#copyButton, #helpMessage {
+#summaryMessage {
     -fx-text-fill: white;
 }
 
-#copyButton {
-    -fx-background-color: dimgray;
-}
-
-#copyButton:hover {
-    -fx-background-color: gray;
-}
-
-#copyButton:armed {
-    -fx-background-color: darkgray;
-}
-
-#helpMessageContainer {
+#summaryMessageContainer {
     -fx-background-color: derive(#1d1d1d, 20%);
 }
