--- a/src/main/resources/view/MeetingsListCard.fxml
+++ b/src/main/resources/view/MeetingsListCard.fxml
@@ -16,6 +16,7 @@
         <padding>
             <Insets top="5" right="5" bottom="5" left="15"/>
         </padding>
+        <Label fx:id="id" styleClass="cell_small_label" text="\$id"/>
         <Label fx:id="description" styleClass="cell_small_label" text="\$description"/>
         <Label styleClass="cell_small_label" text=" : "/>
         <Label fx:id="date" styleClass="cell_small_label" text="\$date"/>
