Reflect Note changes to Applicant parser and model

--- a/src/main/resources/view/ApplicantListCard.fxml
+++ b/src/main/resources/view/ApplicantListCard.fxml
@@ -34,6 +34,7 @@
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="role" styleClass="cell_small_label" text="\$role" />
       <Label fx:id="stage" styleClass="cell_small_label" text="\$stage"/>
+      <Label fx:id="note" styleClass="cell_small_label" text="\$note" />
     </VBox>
       <rowConstraints>
          <RowConstraints />
