--- a/src/main/resources/view/ListPanel.fxml
+++ b/src/main/resources/view/ListPanel.fxml
@@ -7,5 +7,5 @@
 <HBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" VBox.vgrow="ALWAYS">
   <ListView fx:id="personListView" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS"/>
   <ListView fx:id="appointmentListView" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS"/>
-  <ListView fx:id="caseLogListView" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS"/>
+  <!-- removed for v1.2 <ListView fx:id="caseLogListView" VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS"/> -->
 </HBox>
