--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -6,14 +6,13 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.stage.Stage?>
 
-<?import javafx.scene.layout.HBox?>
-<fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-         title="Dook" minWidth="850" minHeight="700" onCloseRequest="#handleExit">
+<fx:root minHeight="700" minWidth="850" onCloseRequest="#handleExit" title="Dook" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
     <Image url="@/images/address_book_32.png" />
   </icons>
@@ -24,13 +23,10 @@
         <URL value="@styleSheets/Extensions.css" />
       </stylesheets>
 
-      <VBox>
+      <VBox style="-fx-background-color: black;">
         <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
           <Menu mnemonicParsing="false" text="File">
             <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-          </Menu>
-          <Menu mnemonicParsing="false" text="Terminal">
-            <MenuItem mnemonicParsing="false" onAction="#handleTerminal" text="New Terminal" />
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
@@ -38,31 +34,47 @@
         </MenuBar>
 
         <HBox VBox.vgrow="ALWAYS">
-          <VBox fx:id="personList" styleClass="pane-with-border" minWidth="350" prefWidth="400" prefHeight="600" VBox.vgrow="ALWAYS">
+          <VBox fx:id="personList" minWidth="350" prefHeight="600" prefWidth="400" styleClass="pane-without-border" VBox.vgrow="ALWAYS">
             <padding>
-              <Insets top="10" right="10" bottom="10" left="10" />
+              <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
-            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+            <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+                  <HBox.margin>
+                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  </HBox.margin>
           </VBox>
 
           <VBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
-            <StackPane VBox.vgrow="ALWAYS" styleClass="pane-with-border" prefHeight="-Infinity">
-              <padding>
-                <Insets top="5" right="10" bottom="5" left="10" />
-              </padding>
-            </StackPane>
+              <VBox fx:id="bookingList" prefHeight="-Infinity" styleClass="pane-without-border" VBox.vgrow="ALWAYS">
+                  <padding>
+                      <Insets bottom="5" left="10" right="10" top="5" />
+                  </padding>
+                  <StackPane fx:id="bookingListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+                  <HBox.margin>
+                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  </HBox.margin>
+              </VBox>
 
-            <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-border" minHeight="200" prefHeight="200" maxHeight="200">
+            <StackPane fx:id="resultDisplayPlaceholder" maxHeight="200" minHeight="200" prefHeight="200" styleClass="pane-without-border" VBox.vgrow="NEVER">
               <padding>
-                <Insets top="5" right="10" bottom="5" left="10" />
+                <Insets bottom="5" left="10" right="10" top="5" />
               </padding>
+                     <VBox.margin>
+                        <Insets bottom="5.0" top="5.0" />
+                     </VBox.margin>
             </StackPane>
 
             <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-without-border">
               <padding>
-                <Insets top="5" bottom="5" left="10" />
+                <Insets bottom="5" left="10" top="5" />
               </padding>
+                     <VBox.margin>
+                        <Insets bottom="5.0" top="5.0" />
+                     </VBox.margin>
             </StackPane>
+                  <HBox.margin>
+                     <Insets bottom="5.0" left="5.0" right="10.0" top="5.0" />
+                  </HBox.margin>
           </VBox>
         </HBox>
 
