UI improvements to main window

--- a/src/main/resources/view/appointmentView/AppointmentListPanel.fxml
+++ b/src/main/resources/view/appointmentView/AppointmentListPanel.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
 
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@../Listview.css">
+  <Label text="Appointment List" styleClass="list-header"/>
   <ListView fx:id="appointmentListView" VBox.vgrow="ALWAYS"/>
 </VBox>
