--- a/src/main/resources/view/appointmentView/AppointmentListCard.fxml
+++ b/src/main/resources/view/appointmentView/AppointmentListCard.fxml
@@ -25,9 +25,9 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <Label fx:id="nameOfAppointmentHolder" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="appointmentTime" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <Label fx:id="appointmentTime" styleClass="cell_small_label" text="\$appointmentTime" />
+      <Label fx:id="nameOfAppointmentHolder" styleClass="cell_small_label" text="\$appointmentTime" />
     </VBox>
   </GridPane>
 </HBox>
