--- a/src/main/resources/view/personView/PersonListPanel.fxml
+++ b/src/main/resources/view/personView/PersonListPanel.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
 
 <!-- Observe that this component is not included/injected in the FXML files.
 Rather, it gets injected into the UI under MainWindow#fillInnerParts as
 a child of fx:id="personListPanelPlaceholder" in mainWindow.fxml. -->
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@../Listview.css">
+  <Label text="Person List" styleClass="list-header"/>
   <ListView fx:id="personListView" VBox.vgrow="ALWAYS" />
 </VBox>
