--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -350,3 +350,17 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+#subjects {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#subjects .label {
+    -fx-text-fill: white;
+    -fx-background-color: #8b0000;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
