--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -45,18 +45,13 @@
           </padding>
         </StackPane>
 
-        <VBox fx:id="employeeList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
+        <VBox fx:id="employeeList" styleClass="pane-with-border" minWidth="340" prefWidth="340"
+              minHeight="345" prefHeight="345" VBox.vgrow="NEVER">
           <padding>
             <Insets top="10" right="10" bottom="10" left="10" />
           </padding>
-          <StackPane fx:id="employeeListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-        </VBox>
-
-        <VBox fx:id="taskList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets top="10" right="10" bottom="10" left="10" />
-          </padding>
-          <StackPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+          <StackPane fx:id="employeeListPanelPlaceholder" VBox.vgrow="NEVER" minHeight="340" layoutY="0"/>
+          <StackPane fx:id="taskListPanelPlaceholder" VBox.vgrow="NEVER" minHeight="340" translateY="-340"/>
         </VBox>
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
