Add PersonProfile as one of the UI component

--- a/src/main/resources/view/PersonProfile.fxml
+++ b/src/main/resources/view/PersonProfile.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="profilePane" fx:id="profilePane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane>
     <VBox alignment="CENTER_LEFT" minHeight="100" GridPane.rowIndex="0">
       <padding>
