--- a/src/main/resources/view/EmployeeListCard.fxml
+++ b/src/main/resources/view/EmployeeListCard.fxml
@@ -28,6 +28,7 @@
           </minWidth>
         </Label>
         <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
+        <Label fx:id="uid" styleClass="cell_small_label" text="\$uid" />
       </HBox>
       <FlowPane fx:id="tags" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
