Add MI to PersonCard

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -27,6 +27,7 @@
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
         <Label fx:id="contactInformation" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="medicalInformation" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="allergyTags" />
       <Label fx:id="nric" styleClass="cell_small_label" text="\$nric" />
