--- a/src/main/resources/view/PersonProfile.fxml
+++ b/src/main/resources/view/PersonProfile.fxml
@@ -2,20 +2,28 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.image.ImageView?>
 <VBox id="profilePane" fx:id="profilePane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane>
     <VBox alignment="CENTER_LEFT" minHeight="100" GridPane.rowIndex="0">
       <padding>
         <Insets top="5" right="5" bottom="5" left="15" />
       </padding>
-      <HBox spacing="5" alignment="CENTER">
+      <VBox spacing="5" alignment="CENTER">
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
-      </HBox>
+        <ImageView>
+          <image>
+            <Image url="@/images/profile.jpg" />
+          </image>
+          <fitWidth>300</fitWidth>
+        </ImageView>
+      </VBox>
     </VBox>
 
     <VBox alignment="CENTER_LEFT" minHeight="100" GridPane.rowIndex="1">
