--- a/src/main/resources/view/ExitWindow.fxml
+++ b/src/main/resources/view/ExitWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root resizable="false" title="Exit" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root resizable="false" title="Confirm to Exit" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <icons>
         <Image url="@/images/exit_icon.png" />
     </icons>
