--- a/src/main/resources/view/AppointmentListCard.fxml
+++ b/src/main/resources/view/AppointmentListCard.fxml
@@ -24,8 +24,9 @@
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
+        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <Label fx:id="studentId" styleClass="cell_small_label" text="\$studentId" />
+      <Label fx:id="appointmentDateTime" styleClass="cell_small_label" text="\$appointmentDateTime" />
       <Label fx:id="hasAttended" styleClass="cell_small_label" text="\$hasAttended" />
       <Label fx:id="appointmentDescription" styleClass="cell_small_label" text="\$appointmentDescription" />
     </VBox>
