--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -29,7 +29,8 @@
         <Label fx:id="contactInformation" text="\$first" styleClass="cell_big_label" />
         <Label fx:id="medicalInformation" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <FlowPane fx:id="allergyTags" />
+      <Label fx:id="allergy" text="\$first" styleClass="cell_big_label" />
+      <FlowPane fx:id="tags" />
       <Label fx:id="nric" styleClass="cell_small_label" text="\$nric" />
     </VBox>
   </GridPane>
