--- a/src/main/resources/view/LoanListPanel.fxml
+++ b/src/main/resources/view/LoanListPanel.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" spacing="0">
+    <ListView fx:id="personListView" maxHeight="290"/>
     <ListView fx:id="loanListView" VBox.vgrow="ALWAYS"/>
 </VBox>
