--- a/src/main/resources/view/LoanListCard.fxml
+++ b/src/main/resources/view/LoanListCard.fxml
@@ -10,20 +10,21 @@
 <?import javafx.scene.layout.VBox?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-  <GridPane HBox.hgrow="ALWAYS">
-    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
-    </columnConstraints>
-    <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
-      <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
-      </padding>
-      <HBox spacing="5" alignment="CENTER_LEFT">
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
-      </HBox>
-      <Label fx:id="amount" styleClass="cell_small_label" text="\$amount" />
-      <Label fx:id="startDate" styleClass="cell_small_label" text="\$startDate" />
-      <Label fx:id="endDate" styleClass="cell_small_label" text="\$endDate" />
-    </VBox>
-  </GridPane>
+    <GridPane HBox.hgrow="ALWAYS">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150"/>
+        </columnConstraints>
+        <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+            <padding>
+                <Insets top="5" right="5" bottom="5" left="15"/>
+            </padding>
+            <HBox spacing="5" alignment="CENTER_LEFT">
+                <Label fx:id="name" text="\$first" styleClass="cell_big_label"/>
+            </HBox>
+            <Label fx:id="amount" styleClass="cell_small_label" text="\$amount"/>
+            <Label fx:id="startDate" styleClass="cell_small_label" text="\$startDate"/>
+            <Label fx:id="endDate" styleClass="cell_small_label" text="\$endDate"/>
+            <Label fx:id="returned" styleClass="cell_small_label" text="\$returned"/>
+        </VBox>
+    </GridPane>
 </HBox>
