--- a/bin/main/view/PersonListCard.fxml
+++ b/bin/main/view/PersonListCard.fxml
@@ -27,10 +27,19 @@
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <FlowPane fx:id="tags" />
+      <HBox spacing="5" alignment="CENTER_LEFT">
+        <FlowPane fx:id="role" />
+        <FlowPane fx:id="tags" />
+      </HBox>
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
+      <Label fx:id="preferences" styleClass="cell_small_label" text="\$preferences" visible="false" />
+      <Label fx:id="department" styleClass="cell_small_label" text="\$department" visible="false" />
+      <Label fx:id="jobTitle" styleClass="cell_small_label" text="\$jobTitle" visible="false" />
+      <Label fx:id="products" styleClass="cell_small_label" text="\$products" visible="false" />
+      <Label fx:id="skills" styleClass="cell_small_label" text="\$skills" visible="false" />
+      <Label fx:id="termsOfService" styleClass="cell_small_label" text="\$termsOfService" visible="false" />
     </VBox>
   </GridPane>
 </HBox>
