--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -346,3 +346,17 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+#role {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#role .label {
+    -fx-text-fill: white;
+    -fx-background-color: #ab9360;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
