--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -350,3 +350,31 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+#products {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#products .label {
+    -fx-text-fill: white;
+    -fx-background-color: #3e7b91;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
+
+#orders {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#orders .label {
+    -fx-text-fill: white;
+    -fx-background-color: #3e7b91;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
