Update Ui for Clients and Orders

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -87,6 +87,11 @@
     -fx-background-radius: 0;
 }
 
+.section-title {
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -fx-padding: 5px;
+}
 
 #tags .label {
     -fx-text-fill: white;
