--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -49,6 +49,7 @@
                         <padding>
                             <Insets top="10" right="10" bottom="10" left="10"/>
                         </padding>
+                        <Label text="My Clients" styleClass="section-title"/>
                         <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                     </VBox>
 
@@ -57,6 +58,7 @@
                         <padding>
                             <Insets top="10" right="10" bottom="10" left="10"/>
                         </padding>
+                        <Label text="My Orders" styleClass="section-title"/>
                         <StackPane fx:id="orderListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                     </VBox>
                 </SplitPane>
