--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -28,7 +28,7 @@
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <FlowPane fx:id="tags" />
-      <Label fx:id="relationship" styleClass="cell_small_label" text="\$relationship" />
+      <Label fx:id="relationship" styleClass="relationship-label" text="\$relationship" />
       <Label fx:id="policy" styleClass="policy-label" text="\$policy" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
